fix spacing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@ main {
 }
 
 .pagination {
+  margin-bottom: 0;
   justify-content: center;
 }
 
